--- a/FirstDjangoProject/templates/home.html
+++ b/FirstDjangoProject/templates/home.html
@@ -5,6 +5,6 @@
     <title>Home Page</title>
 </head>
 <body>
-    <p>Welcome to main PAGE!</p>
+    <p> Hello {{ username }} !</p>
 </body>
 </html>
