Completed lesson 4 for Web Development.

--- a/FirstDjangoProject/templates/contact.html
+++ b/FirstDjangoProject/templates/contact.html
@@ -1,16 +1,5 @@
-<!doctype html>
-<!-- Website template by freewebsitetemplates.com -->
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>contact - Space Science Website Template</title>
-	{% load static %}
-	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-	<link rel="stylesheet" type="{% static 'text/css' %}" href="css/mobile.css">
-	<script src="js/mobile.js" type="{% static 'text/javascript' %}"></script>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 	<div id="page">
 		<div id="header">
 			<div>
@@ -78,5 +67,5 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+
+{% endblock %}
