--- a/FirstDjangoProject/templates/about.html
+++ b/FirstDjangoProject/templates/about.html
@@ -1,15 +1,5 @@
-<!doctype html>
-<!-- Website template by freewebsitetemplates.com -->
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>about - Space Science Website Template</title>
-	<link rel="stylesheet" href="css/style.css" type="text/css">
-	<link rel="stylesheet" type="text/css" href="css/mobile.css">
-	<script src="js/mobile.js" type="text/javascript"></script>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 	<div id="page">
 		<div id="header">
 			<div>
@@ -91,5 +81,4 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+{% endblock %}
