--- a/FirstDjangoProject/templates/blog.html
+++ b/FirstDjangoProject/templates/blog.html
@@ -1,15 +1,5 @@
-<!doctype html>
-<!-- Website template by freewebsitetemplates.com -->
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>blog - Space Science Website Template</title>
-	{% load static %}
-	<link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
-	<link rel="stylesheet" type="{% static 'text/css' %}" href="css/mobile.css">
-	<script src="js/mobile.js" type="{% static 'text/javascript' %}"></script>
-</head>
+{% extends 'base.html' %}
+{% block content %}
 <body>
 	<div id="page">
 		<div id="header">
@@ -113,5 +103,4 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+{% endblock %}
