--- a/MyShop/templates/category.html
+++ b/MyShop/templates/category.html
@@ -4,10 +4,17 @@
 
 {% block content %}
   <h3>Categories:</h3>
-  {% for category in category_list %}
-    <li>{{ category.name}}</li>
+<ul>
+  {% for category in categories %}
+    <li>{{ category}}</li>
+      <ul>
+     {% for product in products  %}
+      {% if  product.category == category %}
+        <li>{{product.name}}</li>
+      {% endif %}
+      {% endfor %}
 
+      </ul>
   {% endfor %}
-    <d>Content Secundar</d>
-  {{ category }}
+</ul>
 {% endblock %}
